Grease Pencil color change + DopeSheet 'Summary' = crash #32417

Closed
opened 2012-08-27 08:15:11 +02:00 by Sacha Goedegebure · 5 comments

%%%When combined the following will lead to crash:

  1. Grease Pencil with changed color (anything but default black)
  2. 'Summary' enabled in DopeSheet editor (grease pencil mode)

even without any grease pencil stroke in 3dview will crash

Simple blendfile attached. Just change color & enable 'Summary'

win64
r50218
%%%

%%%When combined the following will lead to crash: 1. Grease Pencil with changed color (anything but default black) 2. 'Summary' enabled in DopeSheet editor (grease pencil mode) even without any grease pencil stroke in 3dview will crash Simple blendfile attached. Just change color & enable 'Summary' win64 r50218 %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed crash r50235.

Joshua: is there any reason more types from eAnim_KeyType should not be added here?
%%%

%%%fixed crash r50235. Joshua: is there any reason more types from eAnim_KeyType should not be added here? %%%

%%%here == summary_to_keylist%%%

%%%here == summary_to_keylist%%%
Member

%%%All of the other key types are actually "summaries" themselves, and will hence just end up duplicating the stuff that comes up through standard filtering of just F-Curves. Given the way that these work, there isn't really any benefit at all from including them.

I'm guessing that bug here is now fixed, so closing this report now :)%%%

%%%All of the other key types are actually "summaries" themselves, and will hence just end up duplicating the stuff that comes up through standard filtering of just F-Curves. Given the way that these work, there isn't really any benefit at all from including them. I'm guessing that bug here is now fixed, so closing this report now :)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32417
No description provided.