fix [#32417] Grease Pencil color change + DopeSheet 'Summary' = crash

summery wasn't checking fcurve types.